@@ -4,7 +4,6 @@ usr/lib/llvm-@LLVM_VERSION@/bin/clang-check
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-tblgen
 usr/lib/llvm-@LLVM_VERSION@/bin/c-index-test
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-apply-replacements
-usr/lib/llvm-@LLVM_VERSION@/bin/clang-tidy
 usr/lib/llvm-@LLVM_VERSION@/bin/pp-trace
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-query
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-rename
@@ -22,7 +21,6 @@ usr/bin/clang-check-@LLVM_VERSION@
 usr/bin/clang-tblgen-@LLVM_VERSION@
 usr/bin/c-index-test-@LLVM_VERSION@
 usr/bin/clang-apply-replacements-@LLVM_VERSION@
-usr/bin/clang-tidy-@LLVM_VERSION@
 usr/bin/pp-trace-@LLVM_VERSION@
 usr/bin/clang-query-@LLVM_VERSION@
 usr/bin/clang-rename-@LLVM_VERSION@
