@@ -5,7 +5,6 @@ clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/scan-v
 clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/clang-apply-replacements-@LLVM_VERSION@.1.gz
 clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/clang-check-@LLVM_VERSION@.1.gz
 clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/clang-tblgen-@LLVM_VERSION@.1.gz
-clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/clang-tidy-@LLVM_VERSION@.1.gz
 clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/pp-trace-@LLVM_VERSION@.1.gz
 clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/scan-view-@LLVM_VERSION@.1.gz
 
