@@ -1,0 +1,1 @@
+debian/man/clang-tidy-@LLVM_VERSION@.1
