@@ -2,6 +2,9 @@ llvm-toolchain-snapshot (1:3.8~svn247576-2) UNRELEASED; urgency=medium
 
   * Ship run-clang-tidy.py & lang-tidy-diff.py
   * Remove macho-dump from LLVM (removed by upstream r248302)
+  * Introduce clang-tidy-3.8 as a separate package. Replaces clang-modernize
+  * Remove cpp11-migrate-3.8 package. Has been replaced by clang-modernize
+    for a while (which will be replaced by clang-tidy)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 21 Sep 2015 13:16:35 +0200
 
